--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@ body{
   justify-content: center;
   align-items: center;
 }
+
 .container-grid{
   margin-top: 50px;
   display: grid;
   gap: 3rem;
-  grid-template-columns: repeat(4, 20rem);
+  /* grid-template-columns: repeat(4, 20rem); */
   grid-template-rows: auto;
 }
 
@@ -55,5 +56,29 @@ body{
 
 .shopcart > p {
   margin: 0;
+
+}
+
+@media (max-width: 640px) {
+  .container-grid{
+    grid-template-columns: repeat(1, 20rem);
+    grid-template-columns: 1fr;
+  }
+
+}
+
+@media (min-width: 641px) and (max-width: 1007px){
+  .container-grid{
+    grid-template-columns: repeat(2, 20rem);
+
+  }
+
+}
+
+@media (width > 1007px) {
+  .container-grid{
+    grid-template-columns: repeat(3, 20rem);
+
+  }
 
 }
