--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ body{
   align-items: center;
 }
 
-
 .cart-btn{
   width: 60px;
   height: 60px;
@@ -81,4 +80,9 @@ body{
 
   }
 
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
